HWPI iE8 header issue: fixed search label alignment and action nav bottom margin.#2499

--- a/openscholar/themes/hwpi_basetheme/css/hwpi.nav.css
+++ b/openscholar/themes/hwpi_basetheme/css/hwpi.nav.css
@@ -152,9 +152,7 @@ ul.nice-menu ul {
 	margin-bottom: 1em;
 }
 
-.lt-ie9 .region-header-third ul.menu {
-	margin-bottom: -10px;
-}
+
 
 .region-header-third ul.nice-menu {
     margin-top: 5px;
